# glyph-launcher

./: .gitignore  .prettierrc  README.md  bun.lockb  components.json  flake.nix  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts
.husky/: pre-commit
scripts/: setup-hooks.sh
src/: app.css  app.html  app.pcss
src-tauri/: 1.21.3.json  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  discord.rs  instance.rs  lib.rs  main.rs
src-tauri/src/auth/: account.rs  auth.rs  avatar.rs  mod.rs  structs.rs
src-tauri/src/instances/: instance.rs  mod.rs  structs.rs
src-tauri/src/java/: config.rs  detect.rs  download.rs  extract.rs  mod.rs  structs.rs  test.rs
src-tauri/src/resources/: assets.rs  gpu_prefs.rs  launch.rs  mod.rs  screenshots.rs  version.rs  versions.rs  worlds.rs
src/lib/: Sidebar.svelte  Titlebar.svelte  bindings.ts  types.ts  utils.ts
src/lib/components/: ProgressBars.svelte
src/lib/components/core/: InstanceAssetsDownloadPopUp.svelte  JavaDownloadPopUp.svelte  LoginPopUp.svelte  ManualJavaSetup.svelte  ProgressBar.svelte  ProgressBars.svelte  Sidebar.svelte  Titlebar.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
src/lib/components/ui/checkbox/: checkbox.svelte
src/lib/components/ui/dialog/: dialog-content.svelte  (+4 more)
src/lib/controllers/: OnboardingController.svelte.ts  SidebarController.svelte.ts
src/lib/services/: AuthService.svelte.ts
src/lib/ui/: Sidebar.svelte  SidebarOld.svelte  Titlebar.svelte
src/lib/utils/: AccountUtils.ts  AvatarUtils.ts  JavaUtils.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/accounts/: +page.svelte
src/routes/instance/[slug]/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/instance/new/: +page.svelte
src/routes/launcher/: +layout.svelte  +page.svelte
src/routes/launcher/accounts/: +page.svelte
src/routes/launcher/settings/: +page.svelte
src/routes/onboarding/: +layout.svelte  +page.svelte
src/routes/onboarding/account/: +page.svelte
src/routes/onboarding/complete/: +page.svelte
src/routes/onboarding/java/: +page.svelte
src/routes/onboarding/theme/: +page.svelte
src/routes/settings/: +page.svelte
(+68 files in other folders)
