[package]
name = "glyph_launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "glyph_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-log = "2.0.0-rc"
reqwest = { version = "0.12.8", features = ["json"] }
dirs = "5.0.1"
anyhow = "1.0.92"
tokio = { version = "1.41.0", features = ["full"] }
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
zip = "2.2.0"
tar = "0.4.43"
flate2 = "1.0.34"
chrono = "0.4.38"
walkdir = "2.5.0"
