[package]
name = "glyph_launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "glyph_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5", features = [] }
tauri-plugin-log = "2.4"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
dirs = "6"
anyhow = "1.0.98"
tokio = { version = "1.45", features = ["full"] }
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5.0"
tauri-plugin-dialog = "2"
async_zip = { version = "0.0.17", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["compat"] }
tauri-plugin-single-instance = "2"
discord-rich-presence = "0.2.5"
dunce = "1.0.5"
futures = "0.3"
base64 = "0.22.1"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
